--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ ul li:first-child{
 
 .sub-heading{
    width: 30%;
+   margin-left:10%;
 }
 
 .sub-heading p {
@@ -92,7 +93,6 @@ ul li:first-child{
     font-family: 'Poppins',sans-serif;
     font-size: 1em;
     padding-top:70px;
-    padding-left: 50px;
     text-align: justify;
 }
 
